Server code on Java 21, client code on Java 11
According to the discussion #100, this change enforces Java release 21 for server code and 11 for client consumable code.

Using Java 11 requires some changes to `:polaris-core`. One new BSD-3-Clause licensed test dependency `org.threeten:threeten-extra` was added to provide a mutable clock to replace `java.time.InstantSource`.